--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     name: SSH MY_TEST
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: MY_TEST
         uses: ./
         with:
