--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -13,4 +13,4 @@ jobs:
           ssh_key: ${{secrets.SSH_PRIVATE_KEY}}
           known_hosts: ${{secrets.SSH_KNOWN_HOSTS}}
           commands: |
-            echo "text" > testfile2
+            echo "$1" > testfile2
