--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           ssh_key: ${{secrets.SSH_PRIVATE_KEY}}
           known_hosts: ${{secrets.SSH_KNOWN_HOSTS}}
+          env_vars: arg2
           commands: |
             echo "$1" > testfile2
-            exit
