--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           ssh_key: ${{secrets.SSH_PRIVATE_KEY}}
           known_hosts: ${{secrets.SSH_KNOWN_HOSTS}}
-          env_vars: $ARG
+          env_vars: ${{ARG}}
           commands: |
             echo "$1" > testfile2
