--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,9 +12,11 @@ jobs:
         uses: actions/checkout@v2
       - name: MY_TEST
         uses: ./
+        env:
+          ARG: arg3
         with:
           ssh_key: ${{secrets.SSH_PRIVATE_KEY}}
           known_hosts: ${{secrets.SSH_KNOWN_HOSTS}}
           env_vars: arg4
           commands: |
-            echo "$1" > testfile2
+            echo "$ARG" > testfile2
