--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,3 +18,4 @@ jobs:
           env_vars: "${{ env.ARG }} arg4"
           commands: |
             echo "$1" > testfile2
+            echo "$2" > testfile3
