--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,7 +15,9 @@ jobs:
         with:
           ssh_key: ${{secrets.SSH_PRIVATE_KEY}}
           known_hosts: ${{secrets.SSH_KNOWN_HOSTS}}
-          env_vars: "${{ env.ARG }} arg4"
+          env_vars:
+            - ${{env.ARG}}
+            - arg4
           commands: |
             echo "$1" > testfile2
             echo "$2" > testfile3
