--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,4 +18,4 @@ jobs:
           env_vars: ${{toJSON(env)}}
           commands: |
             echo ${{ env.ARG }} > testfile2
-            echo arg4 > testfile3
+            echo ${$1[ARG]} > testfile3
