--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,4 +19,4 @@ jobs:
           env_vars: ${{toJSON(env)}}
           commands: |
             echo ${{ env.ARG }} > testfile2
-            echo \${$1[ARG]} > testfile3
+            echo arg2 > testfile3
