final github action

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,4 +20,4 @@ jobs:
           commands: |
             echo ${{ env.ARG }} > testfile2
             echo arg2 > testfile3
-            echo "$1"
+            echo "$1" > testfile4
