--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,7 +2,7 @@ on: [push]
 
 env:
   ARG1: finally_working
-  ARG2: arg2
+  ARG2: removing working
   SSH_USERNAME: johannes
   SERVER_IP: 164.90.177.64
   SSH_KNOWN_HOSTS: "ecdsa-sha2-nistp256 90asdf9asdf0990"
